# microutil

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  LICENSE  README.md  _unet.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint.yml  test.yml
examples/: example1.ipynb
examples/segmentation_and_tracking/: segmentation_and_tracking.py  segmentation_and_tracking.sh
microutil/: __init__.py  _names.py  _unet.py  array_utils.py  leica.py  loading.py  masks.py  napari_wrappers.py  preprocess.py  segmentation.py  segmentation_helpers.py  single_cell.py  track_utils.py  tracking.py  trapathon.py
microutil/btrack/: __init__.py  btrack.py
microutil/cellpose/: __init__.py  cellpose.py
microutil/leica/: __init__.py  leica.py
microutil/loading/: aics_helpers.py  legacy.py
microutil/single_cell/: __init__.py  single_cell.py
microutil/tests/: test_mm_load.py  test_reindex.py  test_segmentation.py  test_tracking.py  utils.py
microutil/tests/test-data/individualize/expected/C/: .zarray  .zattrs  0
microutil/tests/test-data/individualize/expected/images/: .zarray  .zattrs  0.0.0.0.0
microutil/tests/test-data/individualize/expected/labels/: .zarray  .zattrs  0.0.0.0
microutil/tests/test-data/individualize/expected/peak_mask/: .zarray  .zattrs  0.0.0.0
microutil/tests/test-data/individualize/expected/watershed_seeds/: .zarray  .zattrs  0.0.0.0
microutil/tests/test-data/individualize/input/C/: .zarray  .zattrs
microutil/tests/test-data/individualize/input/images/: .zarray
microutil/tests/test-data/individualize/input/mask/: .zarray  0.0.0.0
microutil/tests/test-data/load_mm_frames/input/Pos0/: img_channel000_position000_time000000000_z000.tif  img_channel000_position000_time000000000_z001.tif  img_channel000_position000_time000000000_z002.tif  img_channel000_position000_time000000001_z000.tif  img_channel000_position000_time000000001_z001.tif  img_channel000_position000_time000000001_z002.tif  img_channel000_position000_time000000002_z000.tif  img_channel000_position000_time000000002_z001.tif  img_channel000_position000_time000000002_z002.tif  img_channel000_position000_time000000003_z000.tif  img_channel000_position000_time000000003_z001.tif  img_channel000_position000_time000000003_z002.tif  img_channel000_position000_time000000004_z000.tif  img_channel000_position000_time000000004_z001.tif  img_channel000_position000_time000000004_z002.tif  img_channel000_position000_time000000005_z000.tif  img_channel000_position000_time000000005_z001.tif  img_channel000_position000_time000000005_z002.tif  img_channel001_position000_time000000000_z000.tif  img_channel001_position000_time000000000_z001.tif  img_channel001_position000_time000000000_z002.tif  img_channel001_position000_time000000001_z000.tif  img_channel001_position000_time000000001_z001.tif  img_channel001_position000_time000000001_z002.tif  img_channel001_position000_time000000002_z000.tif  img_channel001_position000_time000000002_z001.tif  img_channel001_position000_time000000002_z002.tif  img_channel001_position000_time000000003_z000.tif  img_channel001_position000_time000000003_z001.tif  img_channel001_position000_time000000003_z002.tif  img_channel001_position000_time000000004_z000.tif  img_channel001_position000_time000000004_z001.tif  img_channel001_position000_time000000004_z002.tif  img_channel001_position000_time000000005_z000.tif  img_channel001_position000_time000000005_z001.tif  img_channel001_position000_time000000005_z002.tif  (+37 more)
microutil/tests/test-data/load_mm_frames/reference_file/: .zarray  0.0.0.0.0.0
microutil/tests/test-data/reindex/expected/: .zarray  0.0  1.0
microutil/tests/test-data/reindex/input/: .zarray  0.0  1.0
microutil/tests/test-data/tracking/: .zarray
microutil/tests/test-data/tracking/expected/: 0.0.0  1.0.0
microutil/tests/test-data/tracking/input/: .zarray  0.0.0  1.0.0
(+74 files in other folders)
