[metadata]
name = microutil
version = attr: microutil._version.__version__
author= Ian Hunt-Isaak, John Russell
author_email=ianhuntisaak@g.harvard.edu, johnrussell@g.harvard.edu
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url=https://github.com/Hekstra-Lab/microutil
platforms = Linux, Mac OS X, Windows
license = BSD 3-Clause License
classifiers =
  Intended Audience :: Developers
  Intended Audience :: Science/Research
  License :: OSI Approved :: BSD License
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3 :: Only

[options]
python_requires = >=3.6

packages = find:

# Requiring nbformat to specify bugfix version which is not required by
# notebook - perhaps not needed anymore?
install_requires =
    matplotlib>=3.3
    numpy
    pandas
    dask[array]
    scikit-image
    xarray
    tifffile
    read_roi
    ipywidgets
    zarr

[options.extras_require]
test =
    pytest
    black

all =
    napari[all]
    tensorflow


