[metadata]
name = microutil
version = attr: microutil._version.__version__
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Hekstra-Lab/microutil
author = Ian Hunt-Isaak, John Russell
author_email = ianhuntisaak@g.harvard.edu, johnrussell@g.harvard.edu
license = BSD-3-Clause
license_files = LICENSE
platforms = Linux, Mac OS X, Windows
classifiers =
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    btrack
    dask[array]
    fast-histogram
    fast-overlap>=0.4.0
    ipywidgets
    matplotlib>=3.3
    numpy
    pandas
    read-roi
    scikit-image
    tifffile
    xarray
    zarr
python_requires = >=3.8

[options.extras_require]
all =
    napari[all]
    tensorflow
test =
    black
    fsspec>=0.3.3
    pytest

[flake8]
max-line-length = 88
docstring-convention = numpy
ignore = D100, D213, D401, D413, D107, W503, E501, E231
per-file-ignores =
    */__init__.py: F401, F403
